<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".cobrar.ActivityCobrar">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_cobrar_placa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_cobrar_placa"
            style="@style/EditTextIngresarPlaca"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_cobrar_buscar_placa"
        style="@style/Button"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/consultar"/>

    <LinearLayout
        android:id="@+id/linear_layout_cobra_info_vehiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placa_subtitle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cilindraje_subtitle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_ingreso_subtitle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_cobrar_placa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/text_view_cobrar_cilindraje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/text_view_cobrar_fecha_ingreso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_cobrar_cobrar_parqueadero"
            style="@style/Button"
            android:text="@string/cobrar"/>

    </LinearLayout>

</LinearLayout>