<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".registrar.RegistroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placa_title"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_ingresar_placa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_ingresar_placa"
            style="@style/EditTextIngresarPlaca"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cilindraje_title"
        android:layout_marginTop="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_ingresar_cilindraje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_ingresar_cilindraje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/cilindraje"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_ingresar_ingresar_vehiculo"
        style="@style/Button"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/registrar_entrada"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TRM"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/text_view_ingresar_trm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20dp"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_ingresar_ir_a_cobrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_money"
        app:backgroundTint="@color/colorPrimary"
        android:layout_margin="16dp" />

</LinearLayout>